<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:descendantFocusability="blocksDescendants"
    android:padding="16dp"
    tools:context="com.dicoding.netflock.detail.DetailsActivity">

    <ImageView
        android:id="@+id/imagePoster"
        android:layout_width="150dp"
        android:layout_height="220dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@android:color/darker_gray"
        android:contentDescription="@string/imageDesc"/>

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/imagePoster"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/title"/>

    <TextView
        android:id="@+id/textDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textSize="15sp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@id/textTitle"
        app:layout_constraintTop_toBottomOf="@id/textTitle"
        android:text="@string/dateline"/>

    <TextView
        android:id="@+id/textDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/imagePoster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imagePoster"
        android:text="@string/description"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintTop_toBottomOf="@id/textDesc"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <androidx.cardview.widget.CardView
            android:id="@+id/btnDownload"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:elevation="10dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/darker_gray">

            <ImageView
                android:id="@+id/imgDownload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_download"
                tools:ignore="ContentDescription"
                android:layout_gravity="center_horizontal|center_vertical" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btnLike"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:backgroundTint="@android:color/darker_gray">

                <ImageView
                    android:id="@+id/imgLike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_like"
                    tools:ignore="ContentDescription"
                    android:layout_gravity="center_horizontal|center_vertical" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btnShare"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_share"
                    tools:ignore="ContentDescription"
                    android:layout_gravity="center_horizontal|center_vertical" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>