<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navMovies"
        android:icon="@drawable/ic_movie"
        android:title="@string/movies"
        android:enabled="true"
        app:cnb_iconColor="@color/purple_500"
        />

    <item
        android:id="@+id/navShows"
        android:icon="@drawable/ic_tv_shows"
        android:title="@string/tv_shows"
        android:enabled="true"
        app:cnb_iconColor="@color/purple_500"
        />

</menu>